[package]
name = "quick_sort"
version = "0.1.0"
edition = "2021"
authors = ["Jacob Mish <JacobPMish@gmail.com>"]
description = "A terminal based quick sort visualization"
license = "MIT"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.22.1"

[package.metadata.bundle]
name = "quick_sort"
identifier = "io.github.Feromond.quick_sort"
description = "A terminal based quick sort visualization"
icon = ["./quick.png"]